* Transfirst: Fix missing address and remove CC only fields for ACH [davidsantoso]
* Stripe: Support ACH payments [sdball]
* NCRSecurePay: Fix production URL [rwdaigle]
* Clearhaus: Make request signing more transparent & robust [sdball]
* Cashnet: Default custcode option and proper redirect handling [hoenth]
* SagePay: Properly detect Electron brand [sdball]


== Version 1.56.0 (December 1, 2015)
* Add Cardknox gateway [dlehren]
* Mercury: Add support for card present track 2 [ryanbalsdon]
* Cardstream: Improve default currency handling [duff]
* Mercury: Strip start and end sentinels on track 2 [ryanbalsdon]
* Redsys: Support new SHA256 authentication method [davidsantoso]
* Cashnet: Allow custcode override [duff]
* Add Rails 5 support [rafaelfranca]
* Set required Ruby version for install to 2 or greater [rafaelfranca]
* JetPay: Pass ud_fields in capture too [duff]
* Stripe: Correctly detect test mode refunds [aprofeit]
* Fix variables in remote gateways test template [sdball]
* Micropayment: Update fieldnames for new API [duff]
* Fix CreditCard#valid_number? erroring on non-digit characters [PatrickTulskie]
* Stripe: Correctly detect test mode voids [methodmissing]
* Garanti: Add test mode URL and update remote test credentials [cbilgili]
* Cashnet: Allow custcode override on refund [duff]
* Omise: Add a new optional api_version config [zdk]
* Elavon: Include IP address in purchase and authorize requests [aprofeit]
* TransFirst: Add support for ACH and more operations [davidsantoso]
* FirstData_e4: Fix void for even dollar transactions [duff]

== Version 1.55.0 (November 9, 2015)
* CyberSource: send customer IP address when provided [fastjames]
* Braintree: Simplify Braintree scrubbing when no transcript [duff]
* AuthorizeNet: Allow market_type override [duff]
* FirstData_e4: Support level_2 data [duff]
* FirstData_e4: Fix level_2 and level_3 [duff]
* MerchantWareFour: Use Void not PreAuthorizationVoid [duff]
* JetPay: Allow partial captures [duff]