@@ -43,6 +43,7 @@
 * Clearhaus: Make request signing more transparent & robust [sdball]
 * Cashnet: Default custcode option and proper redirect handling [hoenth]
 * SagePay: Properly detect Electron brand [sdball]
+* Mercury: Fix for max-length track 1 [ryanbalsdon]
 
 
 == Version 1.56.0 (December 1, 2015)
